# kubernetes-graceful-shutdown-fastapi

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
resources/: deployment.yaml  service.yaml
